# MAWA-template

./: .gitignore  README.md  plan.md
agent/: README.md  pyproject.toml
agent/llm_agent/: __init__.py  agent.py  config.py  llm_config.py  prompts.py  schemas.py  tools.py  utils.py
agent/llm_agent/state/: __init__.py  agent_state.py  memory.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: dependencies.py  main.py  schemas.py
backend/app/api/: agent_routes.py  user_routes.py  world_routes.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  user_state.py  world_state.py
backend/app/db/storage/: __init__.py  interface.py  memory.py  postgresql.py  sqlite.py
backend/app/state/: state_accessor.py
backend/app/state/user_state/: __init__.py  manager.py  schemas.py
backend/app/state/world_state/: __init__.py  manager.py  schemas.py
frontend/: .env.example  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
