[project]
name = "llm-agent"
version = "0.1.0"
description = "可重用的 LLM Agent 套件，基於 LlamaIndex"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.10.0",
    "llama-index-llms-ollama>=0.1.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

